<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PwActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08071136" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="비밀번호 수정"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imgBack"
        app:layout_constraintStart_toEndOf="@+id/imgBack"
        app:layout_constraintTop_toTopOf="@+id/imgBack" />

    <EditText
        android:id="@+id/currentPw"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/boardstyle"
        android:ems="10"
        android:hint="@string/currentPw"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="현재 비밀번호"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/currentPw"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imgBack"
        app:layout_constraintTop_toBottomOf="@+id/imgBack" />

    <TextView
        android:id="@+id/newPW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="새 비밀번호"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/newPw"
        app:layout_constraintStart_toStartOf="@+id/currentPw"
        app:layout_constraintTop_toBottomOf="@+id/currentPw" />

    <EditText
        android:id="@+id/newPw"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/boardstyle"
        android:ems="10"
        android:hint="@string/newPw"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/newPW"
        app:layout_constraintTop_toBottomOf="@+id/newPW" />

    <TextView
        android:id="@+id/boardCmtNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="새 비밀번호 재입력"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/confirmPw"
        app:layout_constraintStart_toStartOf="@+id/newPw"
        app:layout_constraintTop_toBottomOf="@+id/newPw" />

    <EditText
        android:id="@+id/confirmPw"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/boardstyle"
        android:ems="10"
        android:hint="@string/confirmPw"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/boardCmtNum"
        app:layout_constraintTop_toBottomOf="@+id/boardCmtNum" />

    <Button
        android:id="@+id/btnPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/blue"
        android:text="@string/btnPw"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/confirmPw"
        app:layout_constraintStart_toStartOf="@+id/confirmPw"
        app:layout_constraintTop_toBottomOf="@+id/confirmPw" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo_new" />

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline25"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/icon_back" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="607dp" />

    <TextView
        android:id="@+id/tvPwCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="비밀번호가 일치합니다!"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/currentPw"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/currentPw"
        app:layout_constraintTop_toBottomOf="@+id/currentPw" />

    <TextView
        android:id="@+id/tvNewPwCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="비밀번호가 일치합니다!"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/confirmPw"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>